[workspace]
members = [
    ".",
    "invoice",
]
default-members = [
    ".",
    "invoice"
]
resolver = "2"

[workspace.package]
version = "0.11.1-rc.7"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
homepage = "https://rgb.info"
repository = "https://github.com/rgb-protocol/rgb-ops"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.82.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "=4.8.1"
nonasync = "=0.1.3"
rgb-ascii-armor = "1.0.0"
baid64 = "=0.4.1"
electrum-client = "0.24.0"
esplora-client = { version = "0.12.1", default-features = false }
rgb-strict-encoding = "1.0.0"
rgb-strict-types = "1.0.0"
rgb-consensus = { version = "0.11.1-rc.7", features = [
    "rand",
    "stl",
] }
indexmap = "2.4.0"
serde_crate = { package = "serde", version = "1", features = ["derive"] }

[package]
name = "rgb-ops"
version = { workspace = true }
description = "RGB ops library for working with smart contracts on Bitcoin & Lightning"
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
name = "rgbstd"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify = { workspace = true }
nonasync = { workspace = true }
rgb-ascii-armor = { workspace = true }
baid64 = { workspace = true }
electrum-client = { workspace = true, optional = true }
esplora-client = { workspace = true, optional = true }
rgb-strict-encoding = { workspace = true }
rgb-strict-types = { workspace = true }
rgb-consensus = { workspace = true }
rgb-invoicing = { version = "0.11.1-rc.7", path = "invoice" }
rgb-aluvm = "0.11.1-alpha.2"
base85 = "=2.0.0"
chrono = "0.4.38"
indexmap = { workspace = true }
serde_crate = { workspace = true, optional = true }
rand = "0.9.1"

[features]
default = []
all = [
    "esplora_blocking",
    "electrum_blocking",
    "mempool_blocking",
    "fs",
    "serde",
]
esplora_blocking = [
    "esplora-client",
    "esplora-client/blocking",
    "esplora-client/blocking-https",
]
electrum_blocking = [
    "electrum-client",
]
mempool_blocking = [
    "esplora_blocking",
]
serde = [
    "serde_crate",
    "chrono/serde",
    "amplify/serde",
    "rgb-strict-encoding/serde",
    "rgb-strict-types/serde",
    "rgb-consensus/serde",
    "rgb-invoicing/serde"
]
fs = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = [
    "wasm_js",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
rgb-strict-encoding = { git = "https://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-ascii-armor = { git = "https://github.com/rgb-protocol/rgb-ascii-armor", branch = "master" }
rgb-strict-types = { git = "https://github.com/rgb-protocol/rgb-strict-types", branch = "master" }
rgb-aluvm = { git = "https://github.com/rgb-protocol/rgb-aluvm", branch = "master" }
rgb-consensus = { git = "https://github.com/rgb-protocol/rgb-consensus", branch = "master"}
